--- a/templates/components/footer/my.footer.html.twig
+++ b/templates/components/footer/my.footer.html.twig
@@ -1,3 +1,35 @@
-<footer class="row">
+<div class="col-sm-12 col-md-9 col-lg-8 pb-3" style="background-color:#576b95">
+    <div class="row">
+        <div class="col-7">
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">impressium</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Contact Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Terms</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">How it works</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-5">
+            <ul class="nav">
+                <li class="nav-item mr-2 mt-1">
+                    {# include 'components/share/plugins/facebook.plugins.html.twig' #}
+                </li>
+                <li class="nav-item mt-3">
+                    <a class="nav-link twitter-share-button" href="https://twitter.com/intent/tweet">Tweet</a>
+                </li>
+            </ul></div>
+    </div>
 
-</footer>
+</div>
+
+
