--- a/templates/components/header/my.head.html.twig
+++ b/templates/components/header/my.head.html.twig
@@ -1,3 +1,4 @@
+{% include 'components/share/script/face.book.html.twig' %}
 <header class="row mt-1 mb-1">
     <div class="col-sm-3 col-md-3 col-lg-2 pt-3" id="myLogo" style="background-color:#576b95">
         <a href="{{ path('app_main_page') }}">
