--- a/templates/registration/password.message.html.twig
+++ b/templates/registration/password.message.html.twig
@@ -1,8 +1,15 @@
- <h1>Registrieren</h1>
+<div style="padding: 10px">
+<h1>Registrieren</h1>
      <h3>Hallo  {{ user.firstName }} Ihre New Password ist da </h3>
 
      <p>New Password is  {{ NeuPassword }}</p>
     <p>Link zum Passworts andern : Der Link steht nach 24 Stunden nicht zur Verfügung</p>
     <p><a href="{{ url('app_pwd_reset',{code:pwdCode}) }}">Change Password</a></p>
-
+ <p>
+ <div style="display: block; font-weight: bolder">Unsubscribe from the list</div>
+    <a href="{{ url('app_register_unsubscribe', {sbCode:sbCode}) }}"  >Bitte klicken Sie hier</a> Um sich abzumelden,   Die Abmeldung ist kostenfrei.
+ </p>
+ <p>
      Danke! Zooya Team
+ </p>
+</div>
