--- a/templates/my.base.html.twig
+++ b/templates/my.base.html.twig
@@ -29,7 +29,7 @@
     </div>
 
 </div>
-<footer class="fixed-bottom">
+<footer id="zooya-footer" class="fixed-bottom">
     <div class="container">
         <div class="row mb-1 mt-3" >
             {% include "components/footer/my.footer.html.twig" %}
@@ -42,6 +42,12 @@
     <script src="{{ asset('js/popper.min.js') }}" ></script>
     <script src="{{ asset('js/bootstrap.min.js') }}" ></script>
     <script src="{{ asset('js/main.js') }}" ></script>
+    <script>
+        $(function() {
+            let marginbottom = $('#zooya-footer').height();
+            $('#mainContent').css("margin-bottom", marginbottom);
+        });
+    </script>
 {% endblock %}
 </body>
 </html>
