--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -11,9 +11,10 @@
      {{ form_row(registrationForm.firstName, { 'label': 'Vorname' }) }}
      {{ form_row(registrationForm.lastName, { 'label': 'Nachname' }) }}
      {{ form_row(registrationForm.dateOfBirth, { 'label': 'Geburtsdatum' }) }}
-     {{ form_row(registrationForm.phoneNr, { 'label': 'Handy-Nr' }) }}
+     {{ form_row(registrationForm.phoneNr, { 'label': 'Handy-Nr','attr':{'placeholder': 'z.B 015651439876'} }) }}
      {{ form_row(registrationForm.email) }}
      {{ form_row(registrationForm.password) }}
+     {{ form_row(registrationForm.captchaCode) }}
      <button class="btn btn-success">Anmeldung</button>
      {{ form_end(registrationForm) }}
  {% endblock %}
