Finish before Adding Chatting Bundle

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,10 @@
     transition: margin-left .5s;
     padding: 10px 16px;
 }
-
+button{
+    z-index:99;
+    cursor:pointer;
+}
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
     .sidebar {padding-top: 15px;}
