--- a/templates/about/terms.html.twig
+++ b/templates/about/terms.html.twig
@@ -6,9 +6,10 @@
         <link href="{{ asset('css/jquery-ui.min.css') }}" rel="stylesheet">
     {% endblock %}
  {% block mainContent %}
-     <div id="about-us">
+     <div id="about-terms">
          <div class="alert alert-light" role="alert">
-             About Us  TODO
+             <a href="#" class="alert-link">Terms and Conditions </a>. TODO
          </div>
+
      </div>
  {% endblock %}
