--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <meta data-react-helmet="true" charset="UTF-8">
+        <meta data-react-helmet="true" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta data-react-helmet="true" name="robots" content="all,index,follow">
+        <meta data-react-helmet="true" name="google" content="nositelinkssearchbox">
+        <meta data-react-helmet="true" name="application-name" content="Zooya">
+        <meta data-react-helmet="true" name="mobile-web-app-capable" content="yes">
+        <meta data-react-helmet="true" name="og:site_name" content="Zooya">
+        <meta data-react-helmet="true" name="og:image" content="https://Zooya.de/favicon.ico">
+        <meta data-react-helmet="true" name="og:type" content="website">
+        <meta data-react-helmet="true" name="twitter:app:name:iphone" content="Zooya">
+        <meta data-react-helmet="true" name="description" content="Zooya ist die größte Mitfahrzentrale Deutschland: Mit Userprofilen, kostenlos für Fahrt anbieten,Open Source, Gemeinschaftssponsor">
+        <title>{% block title %} Mitfahrgelegenheit? Zooya! Deutschland größte Mitfahrzentrale | Zooya ! {% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
