--- a/templates/components/footer/my.footer.html.twig
+++ b/templates/components/footer/my.footer.html.twig
@@ -3,19 +3,19 @@
         <div class="col-7">
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">About</a>
+                    <a class="nav-link text-white" href="{{ path('about_us') }}">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">impressium</a>
+                    <a class="nav-link text-white" href="">impressium</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Contact Us</a>
+                    <a class="nav-link text-white" href="{{ path('about_contact_us') }}">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Terms</a>
+                    <a class="nav-link text-white" href="{{ path('about_terms_condition') }}">Terms</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">How it works</a>
+                    <a class="nav-link text-white" href="{{ path('about_how_it_works') }}">How it works</a>
                 </li>
             </ul>
         </div>
