--- a/templates/security/activate.html.twig
+++ b/templates/security/activate.html.twig
@@ -3,5 +3,5 @@
 {% block title %}aktivieren Sie!{% endblock %}
 
  {% block mainContent %}
-     Gehen Sie zu Ihrer E-Mail und klicken Sie auf den Aktivierungslink
+     Gehen Sie zu Ihrer  E-Mail-Spam-Ordner oder E-Mail  und klicken Sie auf den Aktivierungslink
  {% endblock %}
