--- a/templates/user/my/show.html.twig
+++ b/templates/user/my/show.html.twig
@@ -43,7 +43,8 @@
                         </tr>
                         </tbody>
                     </table>
-                    <a class="btn btn-primary" href="{{ path('my_user_profile_show') }}">Profil bearbeiten</a>
+                    <a class="btn btn-primary" href="{{ path('my_user_profile_show') }}">bearbeiten</a>
+                    <a class="btn btn-danger mr-4" href="{{ path('my_user_delete') }}">entfernen</a>
                 </div>
             </div>
         </div>
