--- a/templates/about/contact.us.html.twig
+++ b/templates/about/contact.us.html.twig
@@ -6,9 +6,13 @@
         <link href="{{ asset('css/jquery-ui.min.css') }}" rel="stylesheet">
     {% endblock %}
  {% block mainContent %}
-     <div id="about-us">
+     <div id="about-contact-us">
          <div class="alert alert-light" role="alert">
-             About Us  TODO
+             {% if is_posted  == false %}
+                 {{ include('contact_admin/_form.html.twig') }}
+             {% else %}
+                 <div class="text-info">Ihre Nachricht wurde gesendet</div>
+             {% endif %}
          </div>
      </div>
  {% endblock %}
