--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,6 +1,4 @@
 {% extends 'main.base.html.twig' %}
-
-{% block title %} Welcome !{% endblock %}
     {% block stylesheets %}
         {{ parent() }}
         <link href="{{ asset('css/jquery-ui.min.css') }}" rel="stylesheet">
@@ -19,35 +17,7 @@
      {% if rides is not empty %}
          {% for ride in rides %}
              <a href="{{ path('ride_search_details',{ 'id':ride.id } ) }}" class="alert alert-dark btn btn-block font-weight-bold text-primary" role="alert">
-                 <div class="ride_details clearfix">
-                     <div><i class="fas fa-running"></i> X {{ ride.passengers }}</div>
-                     <div class="row mx-auto">
-                         <div class="col p-0">
-                             <div style="border-right: 2px solid #c6c8ca; padding-right: 4px">
-                                 <div class="w-100 text-right">{{ ride.pickUpTime | date('H:i') }}</div>
-                                 <div class="w-100 text-right">{{ ride.pickUp }}</div>
-                             </div>
-
-                         </div>
-                         <div class="col p-0">
-                             <div class="w-100 h-100">
-                                 <div class="mt-3 clearfix">
-                                    <div class="float-left" style="width:11%"><i class="far fa-circle"></i></div>
-                                     <div class="float-left" style="margin-top: -4px; width:78%"><hr /></div>
-                                     <div class="float-left" style="width:11%"><i class="fas fa-arrow-alt-circle-right"></i></div>
-                                 </div>
-
-                             </div>
-                         </div>
-                         <div class="col p-0">
-                             <div style="border-left: 2px solid #c6c8ca; padding-left: 4px">
-                                 <div class="w-100 text-left">{{ ride.dropOffTime | date('H:i') }}</div>
-                                 <div class="w-100 text-left">{{ ride.dropOff }}</div>
-                             </div>
-                         </div>
-                     </div>
-                 </div>
-                 <hr>
+                 <hr class="mt-1 mb-1" style="border-width: 4px">
                  <div class="user_details clearfix">
                      <div class="float-left mt-2">
                          <span>{{ ride.price }} €</span>
@@ -66,7 +36,34 @@
                          </div>
                      </div>
                  </div>
+                 <div class="ride_details clearfix mt-n4">
+                     <div><i class="fas fa-running"></i> X {{ ride.passengers }}</div>
+                     <div class="clearfix">
+                             <div class="float-left w-25">
+                                 <div style="border-right: 2px solid #c6c8ca;">
+                                     <div class="text-right mr-1">{{ ride.pickUpTime | date('H:i') }}</div>
+                                     <div class="text-right mr-1">{{ ride.pickUp }}</div>
+                                 </div>
 
+                             </div>
+                             <div class="float-left w-50">
+                                 <div class="">
+                                     <div class="mt-3 clearfix">
+                                         <div class="float-left" style="width:11%"><i class="far fa-circle"></i></div>
+                                         <div class="float-left" style="margin-top: -4px; width:78%"><hr /></div>
+                                         <div class="float-left" style="width:11%"><i class="fas fa-arrow-alt-circle-right"></i></div>
+                                     </div>
+
+                                 </div>
+                             </div>
+                             <div class="float-left w-25">
+                                 <div style="border-left: 2px solid #c6c8ca;">
+                                     <div class="text-left ml-1">{{ ride.dropOffTime | date('H:i') }}</div>
+                                     <div class="text-left ml-1">{{ ride.dropOff }}</div>
+                                 </div>
+                             </div>
+                     </div>
+                 </div>
              </a>
          {% else %}
              <div>
@@ -85,7 +82,9 @@
 
          </div>
          {% else %}
-             {% include "main/_search_ride_form.html.twig" %}
+             {% if form is defined %}
+                {% include "main/_search_ride_form.html.twig" %}
+             {% endif %}
      {% endif %}
 
 {% endblock %}
